--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,42 @@
-anyio==3.6.2
-black==23.1.0
-certifi==2022.12.7
-click==8.1.3
+annotated-types==0.5.0
+anyio==3.7.1
+black==23.9.1
+certifi==2023.7.22
+click==8.1.7
 colorama==0.4.6
-dnspython==2.3.0
-email-validator==1.3.1
-fastapi==0.89.1
+Deprecated==1.2.14
+dnspython==2.4.2
+email-validator==2.0.0.post2
+fastapi==0.103.1
 h11==0.14.0
-httpcore==0.16.3
-httptools==0.5.0
-httpx==0.23.3
+httpcore==0.18.0
+httptools==0.6.0
+httpx==0.25.0
 idna==3.4
+importlib-resources==6.0.1
 isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.2
-mypy-extensions==0.4.3
-orjson==3.8.5
-packaging==23.0
-pathspec==0.11.0
-platformdirs==2.6.2
-pydantic==1.10.4
-python-dotenv==0.21.1
-python-multipart==0.0.5
-PyYAML==6.0
-rfc3986==1.5.0
-six==1.16.0
+limits==3.6.0
+MarkupSafe==2.1.3
+mypy-extensions==1.0.0
+orjson==3.9.7
+packaging==23.1
+pathspec==0.11.2
+platformdirs==3.10.0
+pydantic==2.3.0
+pydantic-extra-types==2.1.0
+pydantic-settings==2.0.3
+pydantic_core==2.6.3
+python-dotenv==1.0.0
+python-multipart==0.0.6
+PyYAML==6.0.1
+slowapi==0.1.8
 sniffio==1.3.0
-starlette==0.22.0
-tomli==2.0.1
-typing_extensions==4.4.0
-ujson==5.7.0
-uvicorn==0.20.0
-watchfiles==0.18.1
-websockets==10.4
+starlette==0.27.0
+typing_extensions==4.7.1
+ujson==5.8.0
+uvicorn==0.23.2
+watchfiles==0.20.0
+websockets==11.0.3
+wrapt==1.15.0
